--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.9",
+    "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
+    "mysql": "^2.18.1",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
